# transcript-create

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  .versionrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  Dockerfile.cpu  Dockerfile.cuda  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ERROR_HANDLING.md  IMPLEMENTATION_SUMMARY_HEALTH_CHECKS.md  IMPLEMENTATION_SUMMARY_LOGGING.md  IMPLEMENTATION_SUMMARY_MONITORING.md  IMPLEMENTATION_SUMMARY_SDK.md  LANGUAGE.md  LICENSE  Makefile  OAUTH_EXCEPTION_HANDLING_IMPROVEMENTS.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  alembic.ini  amdgpu-install_6.4.60404-1_all.deb  constraints.txt  cookies.txt  docker-compose.gtx1080.yml  docker-compose.hasanara.yml  docker-compose.prod.yml  docker-compose.storage.yml  docker-compose.yml  package-lock.json  package.json  people-from-titles.json  (+5 more)
.github/: FUNDING.yml  ROADMAP_MASTER_BODY.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.serena/: project.yml
alembic/: MIGRATION_TEMPLATE.md  README.md  env.py
ansible/: README.md  deploy.yml  inventory.example.yml  site.yml
app/: audit.py  cache.py  crud.py  db.py  exceptions.py  logging_config.py  main.py  metrics.py  middleware.py  path_utils.py  schemas.py  security.py  settings.py  version.py  ytdlp_validation.py
clients/: README.md
clients/python/: README.md  pyproject.toml
clients/python/examples/: basic_usage.py  export_example.py  search_example.py
clients/python/tests/: conftest.py  test_client.py  test_exceptions.py
clients/python/transcript_create_client/: __init__.py  client.py  exceptions.py  models.py  rate_limiter.py  retry.py
config/: README.md
docker/: compose.yaml  whisperx.cpu.Dockerfile  whisperx.rocm.Dockerfile
docs/: ACCESSIBILITY.md  ADMIN_DASHBOARD.md  ADVANCED_FEATURES.md  ADVANCED_SEARCH.md  BACKFILL_FORMATTING.md  CLEANUP_EXAMPLES.md  CLEANUP_IMPLEMENTATION_CHECKLIST.md  CLEANUP_PROFILES.md  CLEANUP_QUICK_REFERENCE.md  CONTRIBUTORS.md  DEPENDENCIES.md  DESIGN_SYSTEM.md  DOCKER_OPTIMIZATION.md  DOCKER_OPTIMIZATION_PR_SUMMARY.md  DOCKER_VARIANTS.md  E2E-TESTING.md  ERROR_HANDLING.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CLEANUP.md  IMPLEMENTATION_SUMMARY_ERROR_HANDLING.md  IMPLEMENTATION_SUMMARY_HEALTH_CHECKS.md  IMPLEMENTATION_SUMMARY_LOGGING.md  IMPLEMENTATION_SUMMARY_MONITORING.md  IMPLEMENTATION_SUMMARY_RELEASE_MANAGEMENT.md  LOGGING.md  MIGRATIONS.md  MONITORING.md  OAUTH_EXCEPTION_HANDLING_IMPROVEMENTS.md  PATH_MATCHING.md  PERFORMANCE.md  PRODUCTION_MIGRATIONS.md  PR_101_INTEGRATION.md  PR_SUMMARY_CHECKLIST.md  SECURITY.md  SECURITY_GUIDE.md  SECURITY_SUMMARY.md  SOLUTION_SUMMARY.md  THIRD_PARTY_NOTICES.md  TRANSCRIPT_CLEANUP_SPEC.md  YOUTUBE_TROUBLESHOOTING_QUICK_REFERENCE.md  (+10 more)
e2e/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  package.json  playwright.config.ts  tsconfig.json
examples/: cache_control_middleware.py  po_token_example.py
fonts/: README.md
frontend/: .env.example  Dockerfile  frontend_notes.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
k8s/: README.md  api-deployment.yaml  api-service.yaml  configmap.yaml  data-pvc.yaml  hpa.yaml  ingress.yaml  migrations-job.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secrets.yaml  servicemonitor.yaml  worker-deployment.yaml
python/: requirements.txt  whisperx_runner.py
scripts/: backfill_archive_intelligence.py  backfill_formatting.py  backfill_fts.py  backfill_label_extraction.py  backfill_transcript_blocks.py  backfill_youtube_captions.py  backup_db.sh  backup_media.sh  build-cpu.sh  build-cuda.sh  build-rocm.sh  compare-image-sizes.sh  compare_schema_contract.py  compare_transcript_sources.py  export_backup_metrics.sh  format_transcript.py  gen_ports.py  generate_archive_summaries.py  hide_junk_topic_labels.py  import_title_entity_curation.py  materialize_label_metadata.py  opensearch_indexer.py  propose_label_quality.py  (+13 more)
(+463 files in other folders)
