[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transcript-create"
version = "0.1.0"
description = "Create searchable, exportable transcripts from YouTube videos or channels"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    "frontend",
    "scripts",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "Q"]
ignore = ["B008", "B904"]  # Allow Depends() in FastAPI route defaults, exception chaining

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files
"scripts/*.py" = ["E402"]  # Allow module imports after sys.path manipulation in scripts

[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
  | \.eggs
  | .*\.egg-info
  | frontend
  | scripts
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
extend_skip = ["frontend", "scripts"]
src_paths = ["app", "worker"]
known_first_party = ["app", "worker"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "frontend/",
    ".venv/",
    "venv/",
    "scripts/",
]

[tool.bandit]
exclude_dirs = ["frontend", ".venv", "venv", "tests"]
skips = ["B101"]  # Skip assert_used test

[tool.pytest.ini_options]
markers = [
    "timeout: marks tests with execution timeout (deselect with '-m \"not timeout\"')",
]
