[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcript-create-client"
version = "0.1.0"
description = "Python client library for the Transcript Create API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "onnwee", email = "onnwee@users.noreply.github.com"}
]
keywords = ["transcript", "youtube", "whisper", "transcription", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.9.0",
    "black>=25.0.0",
    "mypy>=1.14.0",
]

[project.urls]
Homepage = "https://github.com/subculture-collective/transcript-create"
Documentation = "https://github.com/subculture-collective/transcript-create/tree/main/clients/python"
Repository = "https://github.com/subculture-collective/transcript-create"
"Bug Tracker" = "https://github.com/subculture-collective/transcript-create/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["transcript_create_client*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "Q"]
ignore = ["B008"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=transcript_create_client --cov-report=term-missing"
